--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    html{
+        /* @apply text-black; */
+
+    }
+}
+
+html, body {
+    height: 100%;
+  }
